[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rill"
version = "0.1"
description = "rill (erosion) - A musical composition for ensemble"
authors = [
    { name = "Adam McCartney", email = "adam@mur.at" }
]
readme = "README.md"
# abjad==3.1 requires Python 3.8 and is not compatible with Python 3.13+
# Pinning to Python 3.8-3.12 for compatibility
requires-python = ">=3.8,<3.13"
dependencies = [
    "abjad==3.1",
    "abjad-ext-tonality",
    "abjad-ext-rmakers",
    "six",
]

[project.urls]
Homepage = "https://github.com/adammccartney/rill"

[tool.hatch.build.targets.wheel]
packages = ["rill"]

[tool.hatch.build.force-include]
"rill" = "rill"
